--- a/PT04-Guilherme/index.html
+++ b/PT04-Guilherme/index.html
@@ -3,11 +3,11 @@
 		<head>
 			<meta charset="UTF-8">
 			<title>
-				First HTML test page
+				Guilherme Carvalho
 			</title>
 			<header>
 				<h1 style="color:black;font-size=150%;font-family:arial">
-					Bem vindo ao meu primeiro site em <strong><ins>HTML</ins></strong>
+					Bem vindo ao meu primeiro site em <strong><ins>"HTML"</ins></strong>
 				</h1>
 			</header>
 		</head>
@@ -15,15 +15,19 @@
 			<p>
 				<!--Input text here-->
 			</p>
-			<button style="background-color:#0099ff;color:#ffffff;"> <!--Abre a página do PT04-->
-				    <a href="https://sites.google.com/a/aebenfica.org/aib2018/pts2016/pt5"> Pt-04:Tutorial </a>
+			<button style="background-color:#0099ff;color:#ffffff;">	<!--Abre a página do PT04-->
+				    <a href="https://sites.google.com/a/aebenfica.org/aib2018/pts2016/pt5" target="_blank"> Pt-04:Tutorial </a>
 			</button>
 			<hr>
-			<p>Parte 5 do <a href="https://sites.google.com/a/aebenfica.org/aib2018/pts2016/pt5"> Pt-04:Tutorial </a></p>
-			<a href="C:\PT04-Guilherme\parte4\p4passo1.html" target="_blank">HTML document</a> <br>
-			<a href="C:\PT04-Guilherme\parte4\p4passo2.html" target="_blank">HTML headings</a> <br>
-			<a href="C:\PT04-Guilherme\parte4\p4passo3.html" target="_blank">HTML paragraphs</a> <br>
-			<a href="C:\PT04-Guilherme\parte4\p4passo4.html" target="_blank">HTML links</a> <br>
-			<a href="C:\PT04-Guilherme\parte4\p4passo5.html" target="_blank">HTML images</a> <br>
+			<p>Parte 4 do <a href="https://sites.google.com/a/aebenfica.org/aib2018/pts2016/pt5" target="_blank"> Pt-04:Tutorial </a></p>	<!--Links com os diferentes passos da parte 4-->
+			<a href="C:\PT04-Guilherme\parte4\p4passo1\index.html" target="_blank">HTML document</a> <br>
+			<a href="C:\PT04-Guilherme\parte4\p4passo2\index.html" target="_blank">HTML headings</a> <br>
+			<a href="C:\PT04-Guilherme\parte4\p4passo3\index.html" target="_blank">HTML paragraphs</a> <br>
+			<a href="C:\PT04-Guilherme\parte4\p4passo4\index.html" target="_blank">HTML links</a> <br>
+			<a href="C:\PT04-Guilherme\parte4\p4passo5\index.html" target="_blank">HTML images</a> <br>
+			<hr>
+			<p>Parte 5 do <a href="https://sites.google.com/a/aebenfica.org/aib2018/pts2016/pt5" target="_blank">Pt-04:Tutorial</a></p>
+			<a target="_blank" href="C:\PT04-Guilherme\parte5_miniprojeto\index.html" target="_blank"><img src="imagens\tabelaturma.png" alt="Tabela da Turma 12.2 com caricaturas" style="width:200px;height:120px"></a>
+			<p style="text-align:right"><em>Guilherme Carvalho</em></p>
 		</body>
 	</html>
