--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<a href="parte4\p4passo5\index.html" target="_blank">HTML images</a> <br>
 			<hr>
 			<p>Parte 5 do <a href="https://sites.google.com/a/aebenfica.org/aib2018/pts2016/pt5" target="_blank">Pt-04:Tutorial</a></p>
-			<a target="_blank" href="parte5_miniprojeto\index.html" target="_blank"><img src="imagens\tabelaturma.png" alt="Tabela da Turma 12.2 com caricaturas" style="width:200px;height:120px"></a>
+			<a target="_blank" href="parte5_miniprojeto\index.html" target="_blank"><img src="imagens\tabelaturma.PNG" alt="Tabela da Turma 12.2 com caricaturas" style="width:200px;height:120px"></a>
 			<p style="text-align:right"><em>Guilherme Carvalho</em></p>
 		</body>
 	</html>
