--- a/parte5_miniprojeto/index.html
+++ b/parte5_miniprojeto/index.html
@@ -7,15 +7,15 @@
 			</title>
 			<!-- Estilo da tabela com um contorno de 2 pixels, espaçamento entre contornos de 12 pixels e espaço entre texto e contorno de 2 pixels -->
 			<style>
-				table, th, td {
-				 	border: 2px solid black;
-				}
-				table {
-					border-spacing: 12px
-				}
-				th, td {
-				 	padding: 2px;
-				}
+			table, th, td {
+			 	border: 2px solid black;
+			}
+			table {
+				border-spacing: 12px
+			}
+			th, td {
+			 	padding: 2px;
+			}
 			</style>
 		</head>
 		<body>
@@ -25,7 +25,10 @@
 					<th style="color:#ffefca;font-family:arial;background-color:#5b95f9;text-align:left;text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black" colspan="6">Turma 12.2(AIB)</th>
 				</tr>
 						<!--As imagens em ponto pequeno têm 80px e as grandes(redirecionadas) têm 1200px-->
-				<tr style="text-align:center;background-color:#ced9ed"> <!--Colocar o "width" em pelo menos cada 1 das colunas para alinhar todas com o mesmo tamanho(independente do texto e sendo 1280/6=213)-->
+						<!--Nome das imagens é o número de cada aluno, e as fotos em tamanho pequeno têm o nº+"minimal" para as distinguir-->
+						<!--Colocar o "width" em pelo menos cada 1 das colunas para alinhar todas com o mesmo tamanho(independente do texto e sendo 1280/6=213)-->
+						<!--Nome das pessoas na mesma célula que as fotos-->
+				<tr style="text-align:center;background-color:#ced9ed">
 					<td style="width:213px;color:#300000"><a target="_blank" href="imagens\1.jpg"><img src="imagens\1minimal.jpg" alt="André Hernandez"></a><br><strong>1. André Hernandez<strong></td>
 					<td style="width:213px;color:#4c1b06"><a target="_blank" href="imagens\2.jpg"><img src="imagens\2minimal.jpg" alt="António Toste"></a><br><strong>2. António Toste</strong></td>
 					<td style="width:213px;color:#4c2b06"><a target="_blank" href="imagens\5.jpg"><img src="imagens\5minimal.jpg" alt="David Ferreira"></a><br><strong>5. David Ferreira</strong></td>
